vtenc: Unlock the stream lock while waiting for pending frames to be completed in finish()

We might otherwise deadlock because gst_vtenc_enqueue_buffer() can be
called again and will take the stream lock again from another thread.

https://bugzilla.gnome.org/show_bug.cgi?id=742174